--- a/colabs/2-1-13-AssignmentQuestion.ipynb
+++ b/colabs/2-1-13-AssignmentQuestion.ipynb
@@ -85,8 +85,8 @@
    "source": [
     "# PLEASE COMPELTE THIS CELL\n",
     "\n",
-    "SHAPE = #YOUR CODE HERE#\n",
-    "LOSS = #YOUR CODE HERE#\n",
+    "SHAPE = #YOUR CODE HERE#[1]\n",
+    "LOSS = #YOUR CODE HERE#'mean_squared_error'\n",
     "\n",
     "# Define your model type\n",
     "model = Sequential([Dense(units=1, input_shape=SHAPE)])\n",
