--- a/colabs/2-2-12-AssignmentQuestion.ipynb
+++ b/colabs/2-2-12-AssignmentQuestion.ipynb
@@ -79,8 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_images  = #YOUR CODE HERE#\n",
-    "test_images = #YOUR CODE HERE#"
+    "training_images  = training_images / 255.0\n",
+    "test_images = test_images / 255.0
    ]
   },
   {
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "NUMBER_OF_NEURONS = #YOUR_CODE_HERE#\n",
+    "NUMBER_OF_NEURONS = 1024\n",
     "\n",
     "# define the new model\n",
     "model = tf.keras.models.Sequential([tf.keras.layers.Flatten(input_shape=(28,28)),\n",
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "YOUR_NEW_LAYER = #YOUR_CODE_HERE#\n",
+    "YOUR_NEW_LAYER = tf.keras.layers.Dense(512, activation=tf.nn.relu)\n",
     "\n",
     "model = tf.keras.models.Sequential([tf.keras.layers.Flatten(input_shape=(28,28)),\n",
     "                                    tf.keras.layers.Dense(512, activation=tf.nn.relu),\n",
@@ -251,8 +251,8 @@
    "outputs": [],
    "source": [
     "# get new non-normalized mnist data\n",
-    "training_images_non = #YOUR_CODE_HERE#\n",
-    "test_images_non = #YOUR_CODE_HERE#\n",
+    "training_images_non = training_images * 255\n",
+    "test_images_non = test_images_non = test_images * 255\n",
     "\n",
     "# re-compile, re-fit and re-evaluate\n",
     "model = tf.keras.models.Sequential([tf.keras.layers.Flatten(input_shape=(28,28)),\n",
@@ -290,7 +290,7 @@
     "# define and instantiate your custom Callback\n",
     "class myCallback(tf.keras.callbacks.Callback):\n",
     "  def on_epoch_end(self, epoch, logs={}):\n",
-    "    if( #YOUR_CODE_HERE# ):\n",
+    "    if( logs.get('accuracy')>0.86 ):\n",
     "      self.model.stop_training = True\n",
     "callbacks = myCallback()\n",
     "\n",
