--- a/colabs/2-2-12-AssignmentQuestion.ipynb
+++ b/colabs/2-2-12-AssignmentQuestion.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "training_images  = training_images / 255.0\n",
-    "test_images = test_images / 255.0
+    "test_images = test_images / 255.0"
    ]
   },
   {
