--- a/colabs/2-2-12-AssignmentQuestion.ipynb
+++ b/colabs/2-2-12-AssignmentQuestion.ipynb
@@ -252,7 +252,7 @@
    "source": [
     "# get new non-normalized mnist data\n",
     "training_images_non = training_images * 255\n",
-    "test_images_non = test_images_non = test_images * 255\n",
+    "test_images_non = test_images * 255\n",
     "\n",
     "# re-compile, re-fit and re-evaluate\n",
     "model = tf.keras.models.Sequential([tf.keras.layers.Flatten(input_shape=(28,28)),\n",
